# storage-core-rs

./: Cargo.toml  README.MD  README.md
data/tests1/users/: 1.json  2.json
examples/: concurrent.rs  database.rs  repo.rs  storage.rs
examples/common/: models.rs
src/: lib.rs
src/core/: mod.rs
src/fs/: collections.rs  database.rs  errors.rs  file.rs  filter.rs  mod.rs  repository.rs  search.rs  utils.rs
src/vector/: mod.rs  search.rs  similarity.rs
