[package]
name = "storage-core"
version = "0.1.0"
edition = "2024"

authors = ["Raghu Kasavajhula <raghukas@gmail.com>"]
description = "Core storage abstractions with pluggable backends"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/storage-core"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
async-trait = "0.1"
anyhow = "1.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.148"
tracing = {version = "0.1.40"}
tracing-subscriber = { version= "0.3.18", features = ["env-filter"] }
thiserror = "2.0.17"
bson = { version = "3.1", features = ["serde"] }
crc32fast = "1.5.0"
rust_decimal = "1.40.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
once_cell = "1.18"
